# smallchain_playground

./: .envrc.example  flake.nix
agent-service-toolkit/: pyproject.toml
agent-service-toolkit/src/agents/: research_assistant.py  tools.py
agent-service-toolkit/src/schema/: __init__.py  schema.py
agent-service-toolkit/src/service/: service.py
assistant-ui-stockbroker/: package-lock.json
assistant-ui-stockbroker/backend/src/: index.ts
haystack/: flake.nix  hello.py  main.py  pyproject.toml
langgraph/: package-lock.json
langgraph-demo/: main.py  pyproject.toml
n8n/: smallchain_calculatorAgent.json  smallchain_project_manager.json
