[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.60",
    "openai>=1.58.1",
    "pydantic>=2.10.4",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
